2001-08-30  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/ceos2/sar_ceosdataset.cpp: added four corner support for ERS
	products with map projection record.

2001-08-29  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/ntf: add support for GType 5 - add ntfstroke.cpp.

	* frmts/GNUmakefile: fix so that failure of a submake will
	terminate the frmts level make.

2001-08-23  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogr_fromepsg.cpp: fixed serious bug translating LCC projections
	from EPSG to WKT. 

2001-08-22  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/png/pngdataset.cpp: added support for reading and
	writing tRNS (transparency) information.  Added support for writing
	paletted images.

	* frmts/gif/gifdataset.cpp: added support for reading transparency
	values.

	* frmts/jpeg, frmts/png, frmts/gif: added support for .wld files. 

	* frmts/ceos2/sar_ceosdataset.cpp: don't try to extract gcps
	if there is no prefix data.

	* frmts/ceos2/ceosrecipe.c: corrected prefix data handling
	logic.  Accept 0 bytes of prefix as value ... often the case
	in ERS datasets. 

2001-08-15  Frank Warmerdam  <warmerdam@pobox.com>

	* core/gdal_misc.cpp: Return magnitude values for samples from
	complex valued bands.

2001-08-13  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrspatialreference.cpp: improved IsSame() test.

2001-07-18  Frank Warmerdam  <warmerdam@pobox.com>

	* aclocal.m4: modified to identify -all for IRIX. 

2001-07-17  Frank Warmerdam  <warmerdam@pobox.com>

	* png: ensure we have png.h before accepting system png.  Moved 
	internal libpng code into a subdirectory to avoid include file
	confusion.

	* configure: added support for detecting PostgreSQL.  

	* GDALmake.opt, app/GNUmakefile: Added support for building on 
	platforms without shared library support (ie. Cygwin).

2001-07-12  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/raw/pauxdataset.cpp: Added limited support for reading gcps
	and projections.
